[refactor] WsCatalogBuilder 구조 개선 및 WsCatalog MCP 서버 도입 (#1263)
* feat: WebSocket 컨트랙트 MCP 서버 도입 (tools/ws-mcp, 6종 도구)

PR1 의 /dev/ws-catalog 엔드포인트를 소비하는 Node/TypeScript MCP 서버.
FE 개발자 / Claude Code 가 WebSocket 토픽·큐·send 컨트랙트를 즉시 조회
하고 STOMP 세션을 짧게 띄워 연결·구독·송신 검증을 수행할 수 있게 한다.

도구 6종:
- ws_describe: path 한 개의 풀 컨트랙트 + 참조 schema
- ws_list_topics: topics/queues/sends 검색·필터 목록
- ws_source: 발행 메서드 위치 (className#methodName)
- ws_connect: STOMP 연결 가능 여부 검증
- ws_subscribe: 토픽 구독, envelope raw 메시지 캡처
- ws_send: 메시지 송신 + 후속 응답 캡처 (선택)

카탈로그 source:
- WS_MCP_CATALOG_URL env (기본 localhost:8080/dev/ws-catalog) 로 HTTP fetch
- ~/.zzol-mcp/catalog.json 캐싱 (ETag/Last-Modified 헤더 활용)
- HTTP 실패 시 캐시 폴백, 캐시도 없으면 명확한 에러

컨트랙트 drift 감지 (L2):
- backend/src/test/java/.../WsCatalogFixtureExportTest 가 실제
  /dev/ws-catalog 응답을 backend/src/test/resources/__fixtures__/
  ws-catalog.json 으로 저장
- tools/ws-mcp/src/catalog/__tests__/contract.test.ts 가 그 fixture 를
  zod 스키마로 parse 해 BE ↔ MCP 시그니처 일치 검증
- CI 가 fixture 갱신 누락을 자동 차단

CI 워크플로우:
- .github/workflows/ws-mcp-ci.yml (paths: tools/ws-mcp/**, fixture 파일)
- typecheck → vitest (L1 단위 + L2 컨트랙트) → build, ~3분 이내

루트 .mcp.json 등록으로 Claude Code 가 자동 인식.

https://claude.ai/code/session_01Msr8tboXQ5sr5ZH4ibpAht

* feat: WsCatalog 리뷰 반영 — SecurityConfig IP 가드, generic 검증 보완, FriendNotifier 위치 복귀

- WsCatalogSecurityConfig: IpAddressMatcher를 @PostConstruct에서 사전 초기화해 요청마다 재생성 방지
- WsCatalogBuilder: generic=Object.class도 payload 검증에 포함 (WsTopic/WsQueue 양쪽)
- WsCatalogBuilderTest: envelope-class 비-record 케이스, generic=Object.class 케이스 테스트 추가
- FriendNotifier: ui/messaging → friend/application으로 복귀 (다른 Notifier 위치 일관성)
- ADR 0011: WsCatalogSecurityConfig 섹션, allowed-ips 키, generic 검증 보완 내용 기재

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* docs: ADR-0011 referencedSchemas/ETag 명시 + .mcp.json 위치 정책 정리

ADR 0011 갱신 (코드에 있던 3가지가 ADR 에 미반영되어 있었음):
- WsCatalogBuilder: TopicEntry/QueueEntry/SendEntry 의 referencedSchemas
  필드 동봉 명시 (MCP/FE 가 payloadT